<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
        <!ENTITY appName "Chain Reaction">
        <!ENTITY appId "971610432652">
        <!ENTITY appVersion "v0.41">
        <!ENTITY appDate "17/09/2019">
        <!ENTITY adMobAppId "ca-app-pub-3940256099942544~3347511713">
        <!ENTITY adMobBannerId "ca-app-pub-3940256099942544/6300978111">
        ]>
        <!--test adMobAppId "ca-app-pub-3940256099942544~3347511713"-->
        <!--test adMobBannerId "ca-app-pub-3940256099942544/6300978111"-->

<resources>
    <string name="app_name">&appName;</string>
    <string name="app_id">&appId;</string>
    <string name="app_version">&appVersion;</string>
    <string name="app_date">&appDate;</string>
    <string name="app_ad_id">&adMobAppId;</string>
    <string name="app_banner_id">&adMobBannerId;</string>

    <string name="button_new_game">New Game</string>
    <string name="button_loading">Loading AI...</string>
    <string name="button_stats">Statistics</string>
    <string name="button_settings">Settings</string>
    <string name="button_more">More</string>
    <string name="button_exit">Exit</string>
    <string name="ai_loaded">AI loaded</string>

    <string name="button_start_game">Start</string>
    <string name="button_add_human_player">Add human</string>
    <string name="button_add_ai_player">Add AI</string>
    <string name="button_clear_players">Clear</string>

    <string name="title_settings">Settings</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="setting_show_propagation">Show propagation</string>
    <string name="setting_gif_enabled">Particle animation</string>
    <string name="setting_time_limit">Time limit</string>
    <string name="setting_sound_enabled">Sound enabled</string>
    <string name="label_time_limit_off">Player has no time limit to step</string>
    <string name="label_time_limit_on">Player has limited time to step</string>
    <string name="setting_delete_database">Delete statistics</string>
    <string name="confirm_delete_database">Are you sure you want to delete the database?\nAll statistics and challenge data will be lost.</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="empty_db">Statistics are empty</string>
    <string name="delete_database_guide">Click here to delete recorded statistics</string>
    <string name="title_game_settings">Game</string>
    <string name="title_visual_representation">Visuals</string>
    <string name="title_sounds">Audio</string>
    <string name="title_saved_data">Saved data</string>

    <string name="title_more">More</string>
    <string name="how_to_play_title">How to play</string>
    <string name="about_title">About</string>
    <string name="how_to_play">&appName; is a two-eight player board game. Human and AI Players can play against each other on different playgrounds. Each player has an allocated color, red (first player) or green (second player) and so on.\n\nThe objective of the game is to take control of the board by eliminating your opponents\' particles. Players take it in turns to place their atoms in a cell.\n\nOnce a cell has reached critical mass the particles explode into the surrounding cells adding an extra atom and claiming the cell for the player. The explosions might result in overloading of an adjacent cell and the chain reaction of explosion continues until every cell is stable.\n\nWhen a red cell explodes and there are green cells around, the green cells are converted to red and the other rules of explosions still follow. The same rule is applicable for other colors.\n\nA player may only place their atoms in a blank cell or a cell that contains atoms of their own color. As soon as a player looses all their particles they are out of the game.</string>
    <string name="about">&appName;\n&appVersion;\n\nCreated by Arpad Fodor\ngithub.com/arpadfodor\n\nRelease date:\n&appDate;\n\nResources:\npixabay.com\nfreesound.org\n\nAI players are powered by DL4j</string>

    <string name="title_activity_type">Game types</string>
    <string name="title_challenge">Challenge game</string>
    <string name="title_custom_game">Custom game</string>
    <string name="button_challenge_game">Challenge</string>
    <string name="button_custom_game">Custom</string>

    <string name="list_clear">Players cleared</string>
    <string name="maximum_reached">Maximum player number reached</string>
    <string name="not_enough_player">Not enough player to start</string>
    <string name="player_added">Player %1$d\ added</string>
    <string name="buttonRand">Random</string>
    <string name="level">Level %1$d\</string>
    <string name="buttonAdd">+</string>
    <string name="buttonExtract">-</string>
    <string name="height_show">height: %1$d\</string>
    <string name="width_show">width: %1$d\</string>
    <string name="minimum_size">Minimum size reached</string>
    <string name="maximum_size">Maximum size reached</string>
    <string name="random_generated">Random configuration generated</string>
    <string name="level_locked">This level has not been unlocked yet</string>

    <string name="title_activity_stats">Statistics</string>
    <string name="ai_vs_human_stats_data">AI vs human games: %1$d\</string>
    <string name="all_stats_data">Total games played: %1$d\</string>
    <string name="victory_data">human victories: %1$d\ \nAI victories: %2$d\</string>
    <string name="victories_chart_label">Victories %</string>
    <string name="step_time_chart_label">Avg. step time of Players</string>
    <string name="offline">Overall</string>
    <string name="challenge">Challenge</string>
    <string name="empty_challenge_db">Challenge data not available</string>
    <string name="all_levels_available">All levels in challenge mode: %1$d\</string>
    <string name="levels_completed_left">completed: %1$d\ \nleft: %2$d\</string>
    <string name="levels_completed_chart_label">Levels completed &amp; left</string>
        <string name="levels_left_chart_label">Levels completed</string>
        <string name="player_beginner">Beginner</string>
        <string name="player_intermediate">Intermediate</string>
        <string name="player_advanced">Advanced</string>
        <string name="player_professional">Professional</string>

    <string name="player_turn">Player %1$d\'s turn</string>
    <string name="ai_turn">[AI %1$d\'s turn]</string>
    <string name="winner_player_text">Player %1$d\ is the winner!</string>
    <string name="winner_ai_text">[AI %1$d\ is the winner!]</string>
    <string name="start_game">Click to start the game</string>
    <string name="game_over">End of the game</string>
    <string name="challenge_level_failed">Failed to complete this level</string>
    <string name="challenge_level_completed">Level completed!</string>
    <string name="all_challenges_completed">All levels are completed!</string>
    <string name="game_over_data">Winner type: %1$s\ \n\nNumber of rounds: %2$d\ \n\nAvg. step time of Players [ms]</string>
    <string name="type_ai">AI</string>
    <string name="type_human">human</string>

    <string name="confirm_exit">Confirm exit</string>
    <string name="confirm_exit_description">Are you sure you want to exit?</string>
    <string name="ai_load_error">Error loading AI</string>
    <string name="confirm_leave_game">Leave current game</string>
    <string name="confirm_leave_game_description">Are you sure you want to leave the current game?</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_completed">Authentication succeed</string>

</resources>
