<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/settingsPreferenceScreen"
                  android:background="@drawable/background_img"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:focusable="true"
                  android:focusableInTouchMode="true">

    <PreferenceCategory android:title="@string/title_game_settings">
        <SwitchPreference
                android:key="time_limit"
                android:summaryOff="@string/label_time_limit_off"
                android:summaryOn="@string/label_time_limit_on"
                android:title="@string/setting_time_limit" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_visual_representation">
        <SwitchPreference
                android:key="show_propagation"
                android:summaryOff="@string/label_off"
                android:summaryOn="@string/label_on"
                android:title="@string/setting_show_propagation" />
        <SwitchPreference
                android:key="gif_enabled"
                android:summaryOff="@string/label_off"
                android:summaryOn="@string/label_on"
                android:title="@string/setting_gif_enabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_sounds">
        <SwitchPreference
                android:key="sound_enabled"
                android:summaryOff="@string/label_off"
                android:summaryOn="@string/label_on"
                android:title="@string/setting_sound_enabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_saved_data">
        <Preference
                android:key="delete_database"
                android:title="@string/setting_delete_database"
                android:summary="@string/delete_database_guide"/>
    </PreferenceCategory>
</PreferenceScreen>
