<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayoutStartCustomActivity"
        tools:context="com.arpadfodor.android.chain_reaction.view.StartCustomActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp">

    <com.flaviofaria.kenburnsview.KenBurnsView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_menu" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlayers"
            android:layout_width="180dp"
            android:layout_height="310dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            app:layout_constraintHorizontal_bias="0.481"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleStartCustom"/>

    <TextView
            android:text="@string/title_custom_game"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMessage"
            android:id="@+id/tvTitleStartCustom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonAddHumanPlayer"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/button_add_human_player"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewPlayers"
            app:layout_constraintEnd_toStartOf="@+id/tvHeight"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonHeightMinus"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/buttonExtract"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddHumanPlayer"
            app:layout_constraintEnd_toStartOf="@+id/tvHeight"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonWidthMinus"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/buttonExtract"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonHeightMinus"
            app:layout_constraintEnd_toStartOf="@+id/tvWidth"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonAddAIPlayer"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/button_add_ai_player"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewPlayers"
            app:layout_constraintStart_toEndOf="@+id/tvHeight"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonHeightPlus"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/buttonAdd"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddAIPlayer"
            app:layout_constraintStart_toEndOf="@+id/tvHeight"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonRandom"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/buttonRand"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recyclerViewPlayers"
            app:layout_constraintTop_toTopOf="@+id/recyclerViewPlayers"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonWidthPlus"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/buttonAdd"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonHeightPlus"
            app:layout_constraintStart_toEndOf="@+id/tvWidth"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.BaseButton
            android:id="@+id/buttonClearPlayers"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/button_clear_players"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonWidthPlus"
            app:layout_constraintEnd_toEndOf="@+id/buttonWidthPlus"
            app:layout_constraintStart_toStartOf="@+id/buttonWidthMinus"/>

    <com.arpadfodor.android.chain_reaction.view.subclass.MainButton
            android:id="@+id/buttonStartGame"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/button_start_game"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonClearPlayers"
            app:layout_constraintEnd_toEndOf="@+id/buttonWidthPlus"
            app:layout_constraintStart_toStartOf="@+id/buttonWidthMinus"/>

    <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMessage"
            android:id="@+id/tvHeight"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="@+id/buttonHeightPlus"
            app:layout_constraintBottom_toTopOf="@+id/buttonWidthPlus"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMessage"
            android:id="@+id/tvWidth"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="@+id/buttonWidthPlus"
            app:layout_constraintBottom_toBottomOf="@+id/buttonWidthPlus"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/startCustomAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/app_banner_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameTypeStartCustomView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyclerViewPlayers"
            app:layout_constraintEnd_toStartOf="@+id/recyclerViewPlayers"/>

</androidx.constraintlayout.widget.ConstraintLayout>