<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayoutMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="view.MainActivity">

    <TextView
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMessage"
            android:id="@+id/tvTitleMain"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

    <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_new_game"
            android:textColor="@color/colorMainButtonText"
            android:background="@drawable/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/buttonStats" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleMain"/>

    <Button
            android:id="@+id/buttonStats"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_stats"
            android:background="@drawable/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonNewGame"
            app:layout_constraintBottom_toTopOf="@+id/buttonSettings"/>

    <Button
            android:id="@+id/buttonSettings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_settings"
            android:background="@drawable/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonStats"
            app:layout_constraintBottom_toTopOf="@+id/buttonAbout"/>

    <Button
            android:id="@+id/buttonAbout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_about"
            android:background="@drawable/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonSettings"
            app:layout_constraintBottom_toTopOf="@+id/buttonExit"/>

    <Button
            android:id="@+id/buttonExit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_exit"
            android:background="@drawable/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/mainAdView"
            app:layout_constraintTop_toBottomOf="@+id/buttonAbout"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/mainAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>