<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayoutTypeActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="view.TypeActivity">

    <com.flaviofaria.kenburnsview.KenBurnsView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_menu"/>

    <TextView
            android:text="@string/title_activity_type"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMessage"
            android:id="@+id/tvTitleMode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

    <view.subclass.BaseButton
            android:id="@+id/buttonChallengeGame"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/button_challenge_game"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleMode"
            app:layout_constraintBottom_toTopOf="@+id/buttonCustomGame"/>

    <view.subclass.BaseButton
            android:id="@+id/buttonCustomGame"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/button_custom_game"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChallengeGame"
            app:layout_constraintBottom_toTopOf="@+id/guidelineType"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/modeAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:srcCompat="@drawable/game_mode_custom"
            android:id="@+id/gameTypeModeCustomView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCustomGame"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:srcCompat="@drawable/game_mode_challenge"
            android:id="@+id/gameTypeModeChallengeView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonChallengeGame"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.65"
            android:id="@+id/guidelineType"/>

</android.support.constraint.ConstraintLayout>